# dev-projects

./: .gitignore  Cargo.toml  README.md
python/apinvestor/: README.md  start.sh
python/apinvestor/src/: database.py
python/apinvestor/src/modules/finance/: router.py
rust/: .gitignore  README.md
rust/1- actix-server/src/api/: mod.rs
rust/1-actix-server/src/: main.rs
rust/10-bevy-game/: Cargo.toml
rust/10-bevy-game/src/: bullet.rs  main.rs  tower.rs
rust/11-avr-arduino/arduino-blink/: Cargo.toml
rust/3- chat/client/src/: main.rs
rust/5-ipsniffer/: Cargo.toml
rust/6- opengl-rust/tutorial-03/src/: main.rs
rust/6-opengl-rust/tutorial-06/src/: main.rs
rust/6-opengl-rust/tutorial-07/: Cargo.toml
rust/7- rusty-blas/: README.md
rust/7- rusty-blas/src/: attribute.rs  lib.rs
rust/7- rusty-blas/src/math/: mat.rs
rust/7- rusty-blas/src/vector/: ops.rs
rust/7-rusty-blas/src/: default.rs  pointer.rs  prefix.rs  structs.rs
rust/8-snake/src/: main.rs
rust/9- webapi/: Cargo.toml
rust/9- webapi/src/: database.rs
rust/9-webapi/src/: handlers.rs
rust/actix-server/: Cargo.toml
rust/actix-server/src/: main.rs  mod.rs
rust/actix-server/src/api/: device.rs  mod.rs
rust/actix-server/src/utils/: mod.rs  repository.rs
rust/bevy-game/: Cargo.toml
rust/bevy-game/src/: main.rs  target.rs
rust/block-chain/: Cargo.toml
rust/embedded-rust/cortex-m3/src/: main.rs
rust/finance-forging/fin_api/: Cargo.toml  Rocket.toml
rust/finance-forging/fin_api/src/: db.rs  main.rs
rust/fsm/: Cargo.toml  README.md
rust/fsm/src/: main.rs
rust/grpcapi/proto/: device.proto
rust/grpcapi/src/: device.rs
rust/ipsniffer/src/: main.rs
rust/lsm-storage/: Cargo.toml  README.md
rust/lsm-storage/src/: main.rs
rust/opengl-rust/tutorial-01/: Cargo.toml
rust/opengl-rust/tutorial-01/src/: main.rs
rust/opengl-rust/tutorial-02/: Cargo.toml
rust/opengl-rust/tutorial-03/: Cargo.toml
rust/opengl-rust/tutorial-04/: Cargo.toml
rust/opengl-rust/tutorial-04/src/: main.rs
rust/opengl-rust/tutorial-05/: Cargo.toml
rust/opengl-rust/tutorial-05/src/: main.rs
rust/opengl-rust/tutorial-06/: Cargo.toml
rust/opengl-rust/tutorial-07/src/: main.rs
rust/opengl-rust/tutorial-08/: Cargo.toml
rust/opengl-rust/tutorial-08/src/: main.rs
rust/projects/ipsniffer/: ip_sniffer.rs
rust/rusty-blas/: Cargo.toml  build.rs  doc.rs
rust/rusty-blas/src/: lib.rs  main.rs  pointer.rs  scalar.rs  structs.rs
rust/rusty-blas/src/math/: mat.rs  matrix.rs  matrix_vector.rs  mod.rs  vector.rs
rust/rusty-blas/src/matrix/: ll.rs  mod.rs  ops.rs
rust/rusty-blas/src/matrix_vector/: ll.rs  mod.rs  ops.rs
rust/rusty-blas/src/vector/: ll.rs  mod.rs  ops.rs
rust/snake/: Cargo.toml
rust/snake/src/: game.rs
rust/training-projects/block-chain/src/: blockchain.rs  main.rs
rust/training-projects/chat-app/src/: main.rs
rust/training-projects/chat/server/src/: main.rs
rust/training-projects/grpcapi/: Cargo.toml  README.md  build.rs
rust/training-projects/grpcapi/proto/: device.proto
rust/training-projects/grpcapi/src/: device.rs  main.rs
rust/training-projects/snake/src/: snake.rs
rust/training-projects/webapi/: Cargo.toml
rust/training-projects/webapi/src/: database.rs  handler.rs  handlers.rs  main.rs  models.rs
