[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
strip = true
opt-level= "s"
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]


[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }

[workspace]
resolver = "2"

