[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = {version="1.0.143", features=["derive"]}
serde_json = "1.0"
uuid = {version="1.1.2", features = ["serde","v4"]}
chrono = {version="0.4.22",features =["serde"]}
