[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = {version="1.0.143", features=["derive"]}
serde_json = "1.0"
uuid = {version="1.1.2", features = ["serde","v4"]}
chrono = {version="0.4.22",features =["serde"]}
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version= "0.3", features = ["env-filter", "json", "time"] }
tracing-futures = "0.2"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"]}
[dev-dependencies]
actix-rt = "2"
mockall = "0.10"
