[package]
name = "old-rusty-computer"
version = "0.0.1"
description = ["BLAS library"]
homepage = "https://github.com/jojoqc/dev-projects"
repository = "https://github.com/jojoqc/dev-projects/tree/main/rust/rusty-blas"
documentation = ""
readme = "README.md"
edition = "2021"
keywords = ["BLAS","RUST","AoS","SoA","AoSoA"]
license = "GPLv3"
build = "build.rs"


[dependencies]
simd = "0.2.4"
num = { version = "0.4", default-features = false, features = ["complex"] }
libc = "0.2"