[package]
name = "orc"
version = "0.0.1"
description = "Rust blas library, Old Rusty Computer"
homepage = "https://github.com/jojoqc/dev-projects"
repository = "https://github.com/jojoqc/dev-projects/tree/main/rust/rusty-blas"
documentation = ""
readme = "README.md"
edition = "2021"
keywords = ["BLAS","RUST","AoS","SoA","AoSoA"]
license = "MIT"
build = "build.rs"


[dependencies]
#simd = "0.2.4"
libc = "0.2"
num = "0.4.0" 
