[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
router = "0.6.0"
logger = "0.4.0"
env_logger = "0.9.0"
rustc-serialize = "0.3.24"
chrono = {version="0.4.19", features=["rustc-serialize"]}
uuid={version="1.1.2", features=["v4","rustc-serialize"]}